[tool.poetry]
name = "cleanup"
version = "0.1.0"
description = ""
authors = ["Pete Dietl <petedietl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
makeelf = { git = "https://github.com/v3l0c1r4pt0r/makeelf.git", rev = "19d8418" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
